<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "VexTrack"><!ENTITY version "v2.0"><!ENTITY author "BitTim (Tim Anhalt)"><!ENTITY gamename "Valorant">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="app_version">&version;</string>
    <string name="app_author">&author;</string>

    <string name="welcome_title_text">Welcome to &appname; 👋</string>
    <string name="welcome_content_text">Welcome to &appname;, a statistics tracker for &gamename;
        that guides you to your in-game goals! Start tracking now and get an insight into your performance!</string>
    <string name="welcome_creator_text">&appname; &version; by &author;</string>

    <string name="welcome_log_in_text">Log in to &appname;</string>
    <string name="welcome_sign_up_text">Create an account</string>
    <string name="email_input_hint">E-Mail</string>
    <string name="password_input_hint">Password</string>
    <string name="log_in_button_text">Log in</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="forgot_password_clickable_text">Forgot password?</string>
    <string name="sign_up_text">Create new account</string>

    <string name="home_frag_name">Home</string>
    <string name="goals_frag_name">Goals</string>
    <string name="seasons_frag_name">Seasons</string>
    <string name="history_frag_name">History</string>
    <string name="add_button_content_desc">Add</string>
    <string name="account_button_content_desc">Account</string>
    <string name="epilogue_button_content_desc">Toggle Epilogue</string>
    <string name="logo_content_desc">VexTrack Logo</string>
    <string name="username_input_hint">Username</string>
    <string name="forgot_cancel_button">Cancel</string>
    <string name="forgot_reset_button_text">Reset Password</string>
    <string name="welcome_forgot_text">Password recovery</string>
    <string name="popup_settings">Settings</string>
    <string name="popup_sign_out">Sign Out</string>
    <string name="content_area_content_desc">Content Area</string>
    <string name="account_profile_picture_content_desc">Profile Picture</string>

    <string name="done_button">Done</string>
    <string name="general_frag_name">General</string>
    <string name="account_frag_name">Account</string>
    <string name="appearance_frag_name">Appearance</string>

    <string name="buffer_days_input_hint">Buffer days</string>
    <string name="setting_general_buffer_days">Buffer days</string>
    <string name="setting_general_ignore_inactive">Ignore inactive days</string>
    <string name="setting_general_ignore_init">Ignore initialization</string>
    <string name="setting_general_force_epilogue">Force epilogue</string>
    <string name="setting_general_single_season">Single season history</string>
    <string name="settings_select_image_button_text">Select image</string>
    <string name="setting_account_reset_pic_button">Reset profile picture</string>
    <string name="setting_account_default_settings_button">Default settings</string>
    <string name="setting_account_delete_button">Delete account</string>
    <string name="setting_account_delete_data_button">Delete data</string>
    <string name="setting_account_danger_zone">Danger zone</string>
    <string name="setting_account_change_password_button">Change password</string>
    <string name="settings_reset_pic_dialog_title">Confirm Reset</string>
    <string name="settings_reset_pic_dialog_message">Are you sure you want to reset your profile picture</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>